syntax = "proto3";
package compservice.model.protobuf;
import "model.proto";
import "google/protobuf/timestamp.proto";

message AccountServiceRequest {
  oneof payload {
    AddAccountRequestPayload addAccount = 1;
    UpdateAccountRequestPayload updateAccount = 2;
    UpdateProfilePictureRequestPayload updateProfilePictureRequestPayload = 3;
    AuthenticateRequestPayload authenticateRequestPayload = 4;
  }
}

message AccountServiceResponse {
  oneof payload {
    GetAccountResponsePayload getAccountResponsePayload = 1;
    AuthenticationResponsePayload authenticationResponsePayload = 4;
    ErrorResponse errorResponse = 100000;
  }
}

message Account {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  google.protobuf.Timestamp birthDate = 5;
  string password = 6;
}

message AddAccountRequestPayload {
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  google.protobuf.Timestamp birthDate = 6;
}

message AuthenticateRequestPayload {
  string username = 2;
  string password = 3;
}

message UpdateProfilePictureRequestPayload {
  bytes picture = 1;
  string userId = 2;
}
message GetAccountResponsePayload {
  Account account = 1;
}
message UpdateAccountRequestPayload {
  Account account = 1;
}